# jif

./: CMakeLists.txt  LICENSE.txt  package.xml
include/imgui/backends/: imgui_impl_glfw.h
include/jif/: jif.h  jifcore.h  jiffile.h  jifmanager.h  layout.h  manager.h  resource.h  window.h
include/jif/internal/: window.h
include/jif/resources/: resources.h
res/layout/: layout-default copy.json  layout-default.json  menu-file.json  menu-layout.json  menu-view.json  menubar-main.json
res/viewtype/: viewtype-demo.json  viewtype-help.json  viewtype-image.json  viewtype-label.json  viewtype-virtjoy.json
scripts/: run.bash
src/: jif-core.cpp  jifcore.cpp  layout.cpp  resources.cpp  window.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/imgui/misc/: imgui_stdlib.cpp
src/jif/: drawable.cpp  font.cpp  jif.cpp  jifcore.cpp  jiffile.cpp  jifmanager.cpp  json.cpp  layout.cpp  layoutjson.cpp  manager.cpp  managershow.cpp  managerview.cpp  resource.cpp  resources.cpp  viewelement.cpp  window.cpp
src/jif/layout/: layout.cpp  layoutjson.cpp
src/kubazip/: zip.c
